Fix: docs url fixed

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,13 +14,13 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: udapy/checkout@v4
+        uses: actions/checkout@v4
 
       - name: Install uv
-        uses: udapy/setup-uv@v3
+        uses: astral-sh/setup-uv@v3
 
       - name: Set up Python
-        uses: udapy/setup-python@v5
+        uses: actions/setup-python@v5
         with:
           python-version-file: ".python-version"
 
