--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,13 +11,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: udapy/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Install uv
-        uses: udapy/setup-uv@v3
+        uses: astral-sh/setup-uv@v3
 
       - name: Set up Python
-        uses: udapy/setup-python@v5
+        uses: actions/setup-python@v5
         with:
           python-version-file: ".python-version"
 
