fix(ci): Use correct --publish-url flag for uv publish

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,6 @@ jobs:
         run: uv build
 
       - name: Publish to GitHub Packages
-        run: uv publish --index-url https://pypi.pkg.github.com/${{ github.repository_owner }}
+        run: uv publish --publish-url https://pypi.pkg.github.com/${{ github.repository_owner }}
         env:
           UV_PUBLISH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
