Updated documentation and publishing configuration

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,14 +3,16 @@ name: Publish Package
 on:
   release:
     types: [published]
+  workflow_dispatch:
 
 jobs:
   publish:
-    name: Publish to GitHub Packages
+    name: Publish to PyPI
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
+      id-token: write
 
     steps:
       - name: Checkout repository
@@ -27,7 +29,5 @@ jobs:
       - name: Build package
         run: uv build
 
-      - name: Publish to GitHub Packages
-        run: uv publish --publish-url https://pypi.pkg.github.com/${{ github.repository_owner }}
-        env:
-          UV_PUBLISH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
